<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.newsapplicationroom.ui.MainActivity">

    <item
        android:id="@+id/action_update_news"
        android:orderInCategory="10"
        android:icon="@drawable/ic_update_news"
        android:title="@string/update_news_action"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_latest_news_alarm"
        android:orderInCategory="20"
        android:icon="@drawable/ic_latest_news_alarm"
        android:title="@string/latest_news_alarm"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="30"
        android:title="@string/profile"
        android:icon="@drawable/ic_latest_profile"
        app:showAsAction="ifRoom" />

</menu>