<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfilePageActivity">

    <ProgressBar
        android:id="@+id/profileGlideProgressBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/user_image"

        android:layout_marginTop="50dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/standard_margin_dimension"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_latest_profile" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        style="@style/text_view_body_style"
        android:layout_margin="@dimen/standard_margin_dimension"
        android:text="@string/placeholder_text"
        android:layout_below="@+id/user_image"/>

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_view_body_style"
        android:layout_margin="@dimen/standard_margin_dimension"
        android:text="@string/placeholder_text"
        android:layout_below="@+id/user_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_email"
        android:layout_margin="@dimen/standard_margin_dimension"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/user_country"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/text_view_body_style"
            android:text="@string/country" />

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/user_save_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:layout_weight="1"
            android:text="@string/save"
            android:onClick="onSubmitButtonClick"/>

        <Button
            android:id="@+id/user_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_latest_logout"
            style="@style/button_style"
            android:onClick="onClickLogout"
            android:text="@string/logout" />

    </LinearLayout>


</RelativeLayout>